finish js, html part.
1, index.html
- (add) div for window, it is for a rectangle  that located in center of the webpage
- (add) script tags for import js files

2. weather.js
- (new) js file for importing weather information and print it

3. bg,js
- (new) js file for bg effect and image

4. todo.js
- (new) js file for generating and managing to-do list

5. images (1,2,3,4,5.jpeg)
- (new) images for background

6. main.css
- (add) some styles for window, clock, greeting, to-do list and weather

--- a/index.html
+++ b/index.html
@@ -9,16 +9,33 @@
     <link href="assets/css/main.css" rel="stylesheet">
 </head>
 <body>
-<div class="js-clock">
-    <h1 class="js-clock__title">
-        00:00
-    </h1>
-    <form class="js-form form">
-        <input type="text" placeholder="What is your name?"/>
+<div class="window">
+    <div class="weather">
+        <span class="js-weather"></span>
+    </div>
+    <div class="js-clock">
+        <h1 class="js-clock__title clock__title">
+            00:00
+        </h1>
+    </div>
+    <form class="js-greetingForm form">
+        <input placeholder="What is your name?" type="text"/>
     </form>
-    <h4 class = "js-greeting greeting"></h4>
+    <h4 class="js-greeting greeting"></h4>
+    <form class="js-toDoForm toDoForm">
+        <input type="text" placeholder="Write a to do"/>
+    </form>
+    <ul class="js-toDoList">
+
+    </ul>
+
 </div>
+<script src="assets/js/config.js"></script>
 <script src="assets/js/clock.js"></script>
 <script src="assets/js/greeting.js"></script>
+<script src="assets/js/todo.js"></script>
+<script src="assets/js/bg.js"></script>
+<script src="assets/js/weather.js"></script>
+
 </body>
 </html>
