add styles for .form, .toDoList. apply media query
1. main.css
- (add) add styles for todoList, .form input

2. responsive.css
- (new) stylesheet for medai query

3. weather.js
- (fix) fix error message

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="assets/css/main.css" rel="stylesheet">
 </head>
 <body>
-<div class="window">
+<main class="window">
     <div class="weather">
         <span class="js-weather"></span>
     </div>
@@ -25,11 +25,10 @@
     <form class="js-toDoForm toDoForm">
         <input type="text" placeholder="Write a to do"/>
     </form>
-    <ul class="js-toDoList">
+    <ul class="js-toDoList toDoList">
 
     </ul>
-
-</div>
+</main>
 <script src="assets/js/config.js"></script>
 <script src="assets/js/clock.js"></script>
 <script src="assets/js/greeting.js"></script>
